fix: ui 1차 수정 및 master 변경에 따른 추가적인 수정